fix(lang): Add "commands.developers.eval.inputString" + fix minor mistakes in the French locale (#1067)
* fix(lang): minor mistakes

* Added "commands.developers.eval.inputString"

* fix(lang): minor mistake

* fix(lang): minor mistake

* fix(lang): minor mistake

--- a/lang/en.json
+++ b/lang/en.json
@@ -6,6 +6,7 @@
                 "description": "Evaluate to the bot",
                 "errorString": "Error",
                 "noCode": "No code was provided.",
+                "inputString": "Input",
                 "outputString": "Output",
                 "usage": "{prefix}eval <some code>"
             }
