--- a/lang/fr.json
+++ b/lang/fr.json
@@ -146,7 +146,7 @@
                 "description": "Débannir quelqu'un du serveur",
                 "slashMemberDescription": "Qui voudrez-vous débannir ?",
                 "slashReasonDescription": "Raison du débanissement",
-                "ubanSuccess": "**{user}** a été **`DÉBANNI`** du serveur.",
+                "unbanSuccess": "**{user}** a été **`DÉBANNI`** du serveur.",
                 "unbanFail": "Impossible de **`DÉBANNIR`** ce membre, parce que : `{message}`",
                 "unbannedByString": "Débanni par : {author}",
                 "usage": "{prefix}unban <id> [raison]"
