--- a/lang/id.json
+++ b/lang/id.json
@@ -146,7 +146,7 @@
                 "description": "Unban seseorang dari server",
                 "slashMemberDescription": "Siapa yang ingin anda un-ban?",
                 "slashReasonDescription": "Alasan un-ban",
-                "ubanSuccess": "**{user}** telah di **`UN-BAN`** dari server ini.",
+                "unbanSuccess": "**{user}** telah di **`UN-BAN`** dari server ini.",
                 "unbanFail": "Tidak dapat **`UN-BAN`** member, dikarenakan: `{message}`",
                 "usage": "{prefix}unban <id> [alasan]"
             },
