--- a/lang/es.json
+++ b/lang/es.json
@@ -318,6 +318,7 @@
             "message2": "Lo siento, pero esta interacción es solo para <@{user}>"
         },
         "createMessage": "Hola {author}, mi prefix es **`{prefix}`**",
+        "cmdLoading": "Loading...",
         "voiceStateUpdate": {
             "connectionReconfigured": "La conexión se ha reconfigurado con éxito.",
             "deleteQueue": "Ha pasado **`{duration}`** y nadie se ha unido al canal de voz, la cola ha sido eliminada.",
