fix(lang): Translate `Loading…` in French and Spanish (#1082)
* fix(lang): Translate `Loading…` in French and Spanish

* Revert back to basic dots

--- a/lang/es.json
+++ b/lang/es.json
@@ -318,7 +318,7 @@
             "message2": "Lo siento, pero esta interacción es solo para <@{user}>"
         },
         "createMessage": "Hola {author}, mi prefix es **`{prefix}`**",
-        "cmdLoading": "Loading...",
+        "cmdLoading": "Cargando...",
         "voiceStateUpdate": {
             "connectionReconfigured": "La conexión se ha reconfigurado con éxito.",
             "deleteQueue": "Ha pasado **`{duration}`** y nadie se ha unido al canal de voz, la cola ha sido eliminada.",
