feat(AboutCommand): add more information

--- a/lang/en.json
+++ b/lang/en.json
@@ -16,12 +16,16 @@
                 "aboutFooter": "{botname} - Bot Information",
                 "botUptimeString": "Bot Uptime",
                 "botVersionString": "Bot version",
+                "cachedUsersString": "Cached Users",
+                "channelsString": "Channels",
+                "commitString": "Commit",
                 "description": "Show the bot's information",
                 "discordJSVersionString": "Discord.js version",
                 "ffmpegVersionString": "FFmpeg version",
                 "nodeVersionString": "Node.js version",
                 "osUptimeString": "OS Uptime",
                 "processUptimeString": "Process Uptime",
+                "serversString": "Servers",
                 "sourceCodeString": "Source code"
             },
             "categoryName": "GENERAL",
