--- a/lang/es.json
+++ b/lang/es.json
@@ -16,12 +16,16 @@
                 "aboutFooter": "Información del bot {botname}",
                 "botUptimeString": "Tiempo de actividad del bot",
                 "botVersionString": "Versión del bot",
+                "cachedUsersString": "Cached Users",
+                "channelsString": "Channels",
+                "commitString": "Commit",
                 "description": "Muestra la información del bot",
                 "discordJSVersionString": "Versión de Discord.js",
                 "ffmpegVersionString": "Versión de FFmpeg",
                 "nodeVersionString": "Versión de Node.js",
                 "osUptimeString": "Tiempo de actividad del S.O.",
                 "processUptimeString": "Tiempo de actividad del proceso",
+                "serversString": "Servers",
                 "sourceCodeString": "Código Fuente"
             },
             "categoryName": "GENERAL",
