--- a/lang/fr.json
+++ b/lang/fr.json
@@ -16,12 +16,16 @@
                 "aboutFooter": "{botname} - Informations du bot",
                 "botUptimeString": "Temps de fonctionnement du bot",
                 "botVersionString": "Version du bot",
+                "cachedUsersString": "Cached Users",
+                "channelsString": "Channels",
+                "commitString": "Commit",
                 "description": "Afficher les informations du bot",
                 "discordJSVersionString": "Version de Discord.js",
                 "ffmpegVersionString": "Version de FFmpeg",
                 "nodeVersionString": "Version de Node.js",
                 "osUptimeString": "Temps de fonctionnement de l'OS",
                 "processUptimeString": "Temps de fonctionnement du processus",
+                "serversString": "Servers",
                 "sourceCodeString": "Code source"
             },
             "categoryName": "GÉNÉRAL",
