--- a/lang/id.json
+++ b/lang/id.json
@@ -16,12 +16,16 @@
                 "aboutFooter": "{botname} - Informasi Bot",
                 "botUptimeString": "Uptime Bot",
                 "botVersionString": "Versi Bot",
+                "cachedUsersString": "Cached Users",
+                "channelsString": "Channels",
+                "commitString": "Commit",
                 "description": "Menampilkan informasi bot",
                 "discordJSVersionString": "Versi Discord.js",
                 "ffmpegVersionString": "Versi FFmpeg",
                 "nodeVersionString": "Versi Node.js",
                 "osUptimeString": "Uptime OS",
                 "processUptimeString": "Uptime Process",
+                "serversString": "Servers",
                 "sourceCodeString": "Kode sumber"
             },
             "categoryName": "UMUM",
