feat(lang): translate new strings (#1101)

--- a/lang/es.json
+++ b/lang/es.json
@@ -16,8 +16,8 @@
                 "aboutFooter": "Información del bot {botname}",
                 "botUptimeString": "Tiempo de actividad del bot",
                 "botVersionString": "Versión del bot",
-                "cachedUsersString": "Cached Users",
-                "channelsString": "Channels",
+                "cachedUsersString": "Usuarios en caché",
+                "channelsString": "Canales",
                 "commitString": "Commit",
                 "description": "Muestra la información del bot",
                 "discordJSVersionString": "Versión de Discord.js",
@@ -25,7 +25,7 @@
                 "nodeVersionString": "Versión de Node.js",
                 "osUptimeString": "Tiempo de actividad del S.O.",
                 "processUptimeString": "Tiempo de actividad del proceso",
-                "serversString": "Servers",
+                "serversString": "Servidores",
                 "sourceCodeString": "Código Fuente"
             },
             "categoryName": "GENERAL",
