--- a/lang/fr.json
+++ b/lang/fr.json
@@ -16,8 +16,8 @@
                 "aboutFooter": "{botname} - Informations du bot",
                 "botUptimeString": "Temps de fonctionnement du bot",
                 "botVersionString": "Version du bot",
-                "cachedUsersString": "Cached Users",
-                "channelsString": "Channels",
+                "cachedUsersString": "Utilisateurs mis en cache",
+                "channelsString": "Salons",
                 "commitString": "Commit",
                 "description": "Afficher les informations du bot",
                 "discordJSVersionString": "Version de Discord.js",
@@ -25,7 +25,7 @@
                 "nodeVersionString": "Version de Node.js",
                 "osUptimeString": "Temps de fonctionnement de l'OS",
                 "processUptimeString": "Temps de fonctionnement du processus",
-                "serversString": "Servers",
+                "serversString": "Serveurs",
                 "sourceCodeString": "Code source"
             },
             "categoryName": "GÉNÉRAL",
