--- a/lang/es.json
+++ b/lang/es.json
@@ -199,6 +199,19 @@
                 "slashRoleDescription": "Mira o cambia la configuración del rol DJ",
                 "slashRoleNewRoleOption": "Nuevo rol DJ"
             },
+            "filter": {
+                "availableFilters": "Available Filters",
+                "currentlyUsedFilters": "Currently Used Filters",
+                "currentState": "`{filter}` is currently `{state}`",
+                "description": "Configure song filter",
+                "embedFooter": "To {opstate, select, enable {enable} other {disable}} the filter, use {prefix}filter {opstate} {filter}",
+                "filterSet": "`{filter}` filter is now `{state}`",
+                "slashStateDescription": "{state, select, enable {Enable} other {Disable}} a song filter",
+                "slashStateFilterDescription": "The song filter that will be {state, select, enable {enabled} other {disabled}}",
+                "slashStatusDescription": "Check the current status of song filters",
+                "slashStatusFilterDescription": "The song filter that you want to check",
+                "specifyFilter": "Please specify the song filter"
+            },
             "lyrics": {
                 "apiError": "El API no pudo encontrar la letra de la canción **{song}**, razón: {message}",
                 "description": "Muestra la letra de una canción",
